--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                     <p>Full-stack разработчик | Python, JS, Django, WordPress</p>
                     <div class="hero-buttons">
                         <a href="#projects" class="btn btn-primary">Посмотреть проекты</a>
-                        <a href="#" class="btn btn-secondary" onclick="downloadCV()">Скачать резюме</a>
+                        <a id="downloadCvBtn" target="_blank" href="assets/docs/Nikita_Ursulenco_RU.pdf" class="btn btn-secondary" download="Nikita_Ursulenco_CV.pdf" >Скачать резюме</a>
                     </div>
                 </div>
                 <div class="hero-avatar">
