--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nikita Ursulenco - Full-stack Developer</title>
     
-    <link rel="preload" href="assets/style/css/style.min.css" as="style">
     <link rel="stylesheet" href="assets/style/css/style.min.css">
 
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
@@ -39,7 +38,10 @@
     <nav>
         <div class="container">
             <div class="nav-container">
-                <div class="logo"><img src="assets/images/logo.png" alt="logo"></div>
+                <a href="#home">
+
+                    <div class="logo"><img src="assets/images/logo.png" alt="logo"></div>
+                </a>
                 <ul class="nav-links">
                     <li><a href="#home">Главная</a></li>
                     <li><a href="#about">Обо мне</a></li>
@@ -661,7 +663,7 @@
     <!-- Education & Certifications Section -->
     <section id="education" class="education">
         <div class="container">
-            <h2 class="section-title fade-in">Education & Certifications</h2>
+            <h2 class="section-title fade-in">Образование и сертификаты</h2>
             <div class="education-grid">
                 <div class="education-card fade-in">
                     <div class="education-header">
@@ -671,10 +673,24 @@
                             </svg>
                         </div>
                         <div class="education-content">
-                            <h3 class="education-title">Bachelor of Computer Science</h3>
-                            <p class="education-institution">Technical University of Moldova</p>
+                            <h3 class="education-title">Information technology</h3>
+                            <p class="education-institution">Free International University of Moldova</p>
                         </div>
-                        <div class="education-date">2019 - 2023</div>
+                        <div class="education-date">2020 - 2025</div>
+                    </div>
+                </div>
+                <div class="education-card fade-in">
+                    <div class="education-header">
+                        <div class="education-icon">
+                            <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor">
+                                <path d="M12 3L1 9l4 2.18v6L12 21l7-3.82v-6l2-1.09V17h2V9L12 3zm6.82 6L12 12.72 5.18 9 12 5.28 18.82 9zM17 15.99l-5 2.73-5-2.73v-3.72L12 15l5-2.73v3.72z"/>
+                            </svg>
+                        </div>
+                        <div class="education-content">
+                            <h3 class="education-title">Commodity Science</h3>
+                            <p class="education-institution">College Agrarian Economy</p>
+                        </div>
+                        <div class="education-date">2016 - 2020</div>
                     </div>
                 </div>
 
@@ -691,11 +707,6 @@
                         </div>
                         <div class="education-date">
                             <span>Aug 2022</span>
-                            <a href="#" class="verify-link" title="Verify Certificate">
-                                <svg width="16" height="16" viewBox="0 0 24 24" fill="currentColor">
-                                    <path d="M3.9 12c0-1.71 1.39-3.1 3.1-3.1h4V7H6.9C4.29 7 2.2 9.09 2.2 11.7v.6c0 2.61 2.09 4.7 4.7 4.7H11v-2H6.9c-1.71 0-3.1-1.39-3.1-3.1v-.6zm4.1 1h8v-2H8v2zm9.1-6H13v2h4.1c1.71 0 3.1 1.39 3.1 3.1v.6c0 1.71-1.39 3.1-3.1 3.1H13v2h4.1c2.61 0 4.7-2.09 4.7-4.7v-.6C21.8 9.09 19.71 7 17.1 7z"/>
-                                </svg>
-                            </a>
                         </div>
                     </div>
                 </div>
@@ -713,33 +724,6 @@
                         </div>
                         <div class="education-date">
                             <span>Mar 2021</span>
-                            <a href="#" class="verify-link" title="Verify Certificate">
-                                <svg width="16" height="16" viewBox="0 0 24 24" fill="currentColor">
-                                    <path d="M3.9 12c0-1.71 1.39-3.1 3.1-3.1h4V7H6.9C4.29 7 2.2 9.09 2.2 11.7v.6c0 2.61 2.09 4.7 4.7 4.7H11v-2H6.9c-1.71 0-3.1-1.39-3.1-3.1v-.6zm4.1 1h8v-2H8v2zm9.1-6H13v2h4.1c1.71 0 3.1 1.39 3.1 3.1v.6c0 1.71-1.39 3.1-3.1 3.1H13v2h4.1c2.61 0 4.7-2.09 4.7-4.7v-.6C21.8 9.09 19.71 7 17.1 7z"/>
-                                </svg>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="education-card fade-in">
-                    <div class="education-header">
-                        <div class="education-icon">
-                            <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor">
-                                <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"/>
-                            </svg>
-                        </div>
-                        <div class="education-content">
-                            <h3 class="education-title">Django for Everybody Specialization</h3>
-                            <p class="education-institution">Coursera - University of Michigan</p>
-                        </div>
-                        <div class="education-date">
-                            <span>Dec 2021</span>
-                            <a href="#" class="verify-link" title="Verify Certificate">
-                                <svg width="16" height="16" viewBox="0 0 24 24" fill="currentColor">
-                                    <path d="M3.9 12c0-1.71 1.39-3.1 3.1-3.1h4V7H6.9C4.29 7 2.2 9.09 2.2 11.7v.6c0 2.61 2.09 4.7 4.7 4.7H11v-2H6.9c-1.71 0-3.1-1.39-3.1-3.1v-.6zm4.1 1h8v-2H8v2zm9.1-6H13v2h4.1c1.71 0 3.1 1.39 3.1 3.1v.6c0 1.71-1.39 3.1-3.1 3.1H13v2h4.1c2.61 0 4.7-2.09 4.7-4.7v-.6C21.8 9.09 19.71 7 17.1 7z"/>
-                                </svg>
-                            </a>
                         </div>
                     </div>
                 </div>
@@ -757,96 +741,54 @@
                         </div>
                         <div class="education-date">
                             <span>Jun 2022</span>
-                            <a href="#" class="verify-link" title="Verify Certificate">
-                                <svg width="16" height="16" viewBox="0 0 24 24" fill="currentColor">
-                                    <path d="M3.9 12c0-1.71 1.39-3.1 3.1-3.1h4V7H6.9C4.29 7 2.2 9.09 2.2 11.7v.6c0 2.61 2.09 4.7 4.7 4.7H11v-2H6.9c-1.71 0-3.1-1.39-3.1-3.1v-.6zm4.1 1h8v-2H8v2zm9.1-6H13v2h4.1c1.71 0 3.1 1.39 3.1 3.1v.6c0 1.71-1.39 3.1-3.1 3.1H13v2h4.1c2.61 0 4.7-2.09 4.7-4.7v-.6C21.8 9.09 19.71 7 17.1 7z"/>
-                                </svg>
-                            </a>
                         </div>
                     </div>
                 </div>
 
-                <div class="education-card fade-in">
-                    <div class="education-header">
-                        <div class="education-icon">
-                            <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor">
-                                <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"/>
-                            </svg>
-                        </div>
-                        <div class="education-content">
-                            <h3 class="education-title">AWS Cloud Practitioner</h3>
-                            <p class="education-institution">Amazon Web Services</p>
-                        </div>
-                        <div class="education-date">
-                            <span>Sep 2023</span>
-                            <a href="#" class="verify-link" title="Verify Certificate">
-                                <svg width="16" height="16" viewBox="0 0 24 24" fill="currentColor">
-                                    <path d="M3.9 12c0-1.71 1.39-3.1 3.1-3.1h4V7H6.9C4.29 7 2.2 9.09 2.2 11.7v.6c0 2.61 2.09 4.7 4.7 4.7H11v-2H6.9c-1.71 0-3.1-1.39-3.1-3.1v-.6zm4.1 1h8v-2H8v2zm9.1-6H13v2h4.1c1.71 0 3.1 1.39 3.1 3.1v.6c0 1.71-1.39 3.1-3.1 3.1H13v2h4.1c2.61 0 4.7-2.09 4.7-4.7v-.6C21.8 9.09 19.71 7 17.1 7z"/>
-                                </svg>
-                            </a>
-                        </div>
-                    </div>
-                </div>
+                
             </div>
         </div>
     </section>
 
     <!-- Contact Section -->
-    <section id="contact" class="contact">
-        <div class="container">
-            <h2 class="section-title fade-in">Get in Touch</h2>
-            <div class="contact-content">
-                <form class="contact-form fade-in" onsubmit="handleSubmit(event)">
-                    <div class="form-group">
-                        <label for="name">Имя</label>
-                        <input type="text" id="name" name="name" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="email">Email</label>
-                        <input type="email" id="email" name="email" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="message">Сообщение</label>
-                        <textarea id="message" name="message" required></textarea>
-                    </div>
-                    <button type="submit" class="btn btn-primary">Send Message</button>
-                </form>
+<section id="contact" class="contact">
+  <div class="container">
+    <h2 class="section-title fade-in">Связаться со мной</h2>
+    <div class="contact-content">
+      <div class="social-links big-icons fade-in">
+        <a href="https://github.com/nikita-ursulenko" class="social-link" target="_blank" style="padding: 5px;">
+          <svg width="50" height="50" viewBox="0 0 24 24" fill="currentColor">
+                <path d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"/>
+          </svg>
+        </a>
+        <a href="https://www.linkedin.com/in/nikita-ursulenco/" class="social-link" target="_blank" style="padding: 5px;">
+          <svg width="50" height="50" viewBox="0 0 24 24" fill="currentColor">
+            <path d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433c-1.144 0-2.063-.926-2.063-2.065 0-1.138.92-2.063 2.063-2.063 1.14 0 2.064.925 2.064 2.063 0 1.139-.925 2.065-2.064 2.065zm1.782 13.019H3.555V9h3.564v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.451C23.2 24 24 23.227 24 22.271V1.729C24 .774 23.2 0 22.222 0h.003z"/>
+          </svg>
+        </a>
+        <a href="https://t.me/banasea" class="social-link" target="_blank">
+          <svg width="50" height="50" viewBox="0 0 24 24" fill="currentColor" style="padding: 5px;">
+                <path d="M11.944 0A12 12 0 0 0 0 12a12 12 0 0 0 12 12 12 12 0 0 0 12-12A12 12 0 0 0 12 0a12 12 0 0 0-.056 0zm4.962 7.224c.1-.002.321.023.465.14a.506.506 0 0 1 .171.325c.016.093.036.306.02.472-.18 1.898-.962 6.502-1.36 8.627-.168.9-.499 1.201-.82 1.23-.696.065-1.225-.46-1.9-.902-1.056-.693-1.653-1.124-2.678-1.8-1.185-.78-.417-1.21.258-1.91.177-.184 3.247-2.977 3.307-3.23.007-.032.014-.15-.056-.212s-.174-.041-.249-.024c-.106.024-1.793 1.14-5.061 3.345-.48.33-.913.49-1.302.48-.428-.008-1.252-.241-1.865-.44-.752-.245-1.349-.374-1.297-.789.027-.216.325-.437.893-.663 3.498-1.524 5.83-2.529 6.998-3.014 3.332-1.386 4.025-1.627 4.476-1.635z"/>
+          </svg>
+        </a>
+        <a href="mailto:nik.urs@icloud.com" class="social-link" target="_blank" style="padding: 5px;">
+          <svg width="50" height="50" viewBox="0 0 24 24" fill="currentColor">
+                <path d="M24 5.457v13.909c0 .904-.732 1.636-1.636 1.636h-3.819V11.73L12 16.64l-6.545-4.91v9.273H1.636A1.636 1.636 0 0 1 0 19.366V5.457c0-.904.732-1.636 1.636-1.636h.749L12 10.724l9.615-6.903h.749c.904 0 1.636.732 1.636 1.636z"/>
+          </svg>
+        </a>
+      </div>
+    </div>
+  </div>
+</section>
 
-
-            </div>
-        </div>
-    </section>
-
-    <!-- Footer -->
-    <footer>
-        <div class="container">
-            <div class="footer-content">
-                <div class="social-links">
-                    <a href="https://github.com/nikita-ursulenko" class="social-link" target="_blank">
-                        <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor">
-                            <path d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"/>
-                        </svg>
-                    </a>
-                    <a href="https://www.linkedin.com/in/nikita-ursulenco/" class="social-link" target="_blank">
-                        <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor">
-                            <path d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433c-1.144 0-2.063-.926-2.063-2.065 0-1.138.92-2.063 2.063-2.063 1.14 0 2.064.925 2.064 2.063 0 1.139-.925 2.065-2.064 2.065zm1.782 13.019H3.555V9h3.564v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.451C23.2 24 24 23.227 24 22.271V1.729C24 .774 23.2 0 22.222 0h.003z"/>
-                        </svg>
-                    </a>
-                    <a href="https://t.me/banasea" class="social-link" target="_blank">
-                        <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor">
-                            <path d="M11.944 0A12 12 0 0 0 0 12a12 12 0 0 0 12 12 12 12 0 0 0 12-12A12 12 0 0 0 12 0a12 12 0 0 0-.056 0zm4.962 7.224c.1-.002.321.023.465.14a.506.506 0 0 1 .171.325c.016.093.036.306.02.472-.18 1.898-.962 6.502-1.36 8.627-.168.9-.499 1.201-.82 1.23-.696.065-1.225-.46-1.9-.902-1.056-.693-1.653-1.124-2.678-1.8-1.185-.78-.417-1.21.258-1.91.177-.184 3.247-2.977 3.307-3.23.007-.032.014-.15-.056-.212s-.174-.041-.249-.024c-.106.024-1.793 1.14-5.061 3.345-.48.33-.913.49-1.302.48-.428-.008-1.252-.241-1.865-.44-.752-.245-1.349-.374-1.297-.789.027-.216.325-.437.893-.663 3.498-1.524 5.83-2.529 6.998-3.014 3.332-1.386 4.025-1.627 4.476-1.635z"/>
-                        </svg>
-                    </a>
-                    <a href="mailto:nik.urs@icloud.com" class="social-link" target="_blank">
-                        <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor">
-                            <path d="M24 5.457v13.909c0 .904-.732 1.636-1.636 1.636h-3.819V11.73L12 16.64l-6.545-4.91v9.273H1.636A1.636 1.636 0 0 1 0 19.366V5.457c0-.904.732-1.636 1.636-1.636h.749L12 10.724l9.615-6.903h.749c.904 0 1.636.732 1.636 1.636z"/>
-                        </svg>
-                    </a>
-                </div>
-                <p>© 2025 Nikita Ursulenco — All Rights Reserved</p>
-            </div>
-        </div>
-    </footer>
+<!-- Footer -->
+<footer>
+  <div class="container">
+    <div class="footer-content">
+      <p>© 2025 Nikita Ursulenco — All Rights Reserved</p>
+    </div>
+  </div>
+</footer>
 
 </body>
 </html>
